@@ -4,8 +4,8 @@
 Polish, Chinese, French, Russian, Italian, Dutch
 and [more languages](https://www.languagetool.org/languages/)**
 
-Version 3.7-SNAPSHOT, 2017-..-..  
-Copyright (C) 2005-2016 the LanguageTool community and Daniel Naber (www.danielnaber.de)  
+Version 3.8-SNAPSHOT, 2017-xx-yy  
+Copyright (C) 2005-2017 the LanguageTool community and Daniel Naber (www.danielnaber.de)  
 Homepage: https://www.languagetool.org
 
 
@@ -23,12 +23,12 @@ Homepage: https://www.languagetool.org
 
 To integrate LanguageTool into LibreOffice or OpenOffice.org, you can use two methods:
 
-1. Double-click `LanguageTool-3.6.oxt`. The extension should
+1. Double-click `LanguageTool-3.7.oxt`. The extension should
    start installing. Follow the on-screen instructions.
 
 2. If the above method doesn't work, call `Tools > Extension
    Manager > Add...` in LibreOffice/OpenOffice.org and browse for the
-   `LanguageTool-3.6.oxt` file.
+   `LanguageTool-3.7.oxt` file.
 
 Close and restart LibreOffice/OpenOffice.org Writer. Remember to close
 the QuickStarter as well if you use it. Type text with
@@ -61,6 +61,10 @@ Please see https://www.languagetool.org/issues/ if you experience problems.
 
 To use the stand-alone version, double click on the `languagetool.jar` file
 or call `java -jar languagetool.jar` from the command line.
+
+When using Java 9, start LanguageTool using `java --add-modules java.xml.bind -jar languagetool.jar`.
+Without that parameter, you'd get an `java.lang.NoClassDefFoundError: javax/xml/bind/JAXBException`
+error.
 
 ### Command-line version
 
@@ -308,7 +312,7 @@ The Romanian data for part-of-speech tagging is developed by Ionuț Păduraru
 
 Russian dictionary originally developed by www.aot.ru and licensed under LGPL.
 (http://www.aot.ru) or (http://sourceforge.net/p/seman/svn/HEAD/tree/trunk/Dicts/SrcMorph/RusSrc/) file (morphs.mrd).
-It was partially converted to fsa format in 2008-2011, 2014, 2016 by Yakov Reztsov.
+It was partially converted to fsa format in 2008-2011, 2014, 2016, 2017 by Yakov Reztsov.
 Frequency information for spell-checking dictionary from (www.aot.ru).
 Source frequency information (https://sourceforge.net/p/seman/svn/HEAD/tree/trunk/Dicts/SrcBinDict/WordData.txt).
 It was converted to use with spell-checking dictionary in 2014 by Yakov Reztsov.
